ProTrackDev/force-app/main/default/objects/TR_Test_Script_Step__c/TR_Test_Script_Step__c.object-meta.xml
<CustomObject>
    <label>Test Script Step</label>
    <nameField>
        <displayFormat>TSS-{000000}</displayFormat>
        <label>Test Script Step Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Script Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>