ProTrackDev/force-app/main/default/objects/TR_Test_Script_Step__c/fields/TR_Action__c.field-meta.xml
<CustomField>
    <fullName>TR_Action__c</fullName>
    <label>Action</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>