ProTrackDev/force-app/main/default/objects/TR_Test_Script_Step__c/fields/TR_Action_Long__c.field-meta.xml
<CustomField>
    <fullName>TR_Action_Long__c</fullName>
    <label>Action Long</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>