ProTrackDev/force-app/main/default/objects/TR_Test_Script_Step__c/fields/TR_Expected_Result__c.field-meta.xml
<CustomField>
    <fullName>TR_Expected_Result__c</fullName>
    <label>Expected Result</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>