ProTrackDev/force-app/main/default/objects/TR_Test_Script_Step__c/fields/TR_Ranked_Sequence__c.field-meta.xml
<CustomField>
    <fullName>TR_Ranked_Sequence__c</fullName>
    <label>Sequence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>