ProTrackDev/force-app/main/default/objects/TR_Test_Script_Step__c/fields/TR_Sequence_Last_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>TR_Sequence_Last_Updated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sequence Last Updated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Test_Script_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>