ProTrackDev/force-app/main/default/objects/TR_Test_Script_Step__c/fields/TR_Test_Script__c.field-meta.xml
<CustomField>
    <fullName>TR_Test_Script__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Script</label>
    <referenceTo>TR_Test_Script__c</referenceTo>
    <relationshipLabel>Test Script Steps</relationshipLabel>
    <relationshipName>Test_Script_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>