ProTrackDev/force-app/main/default/objects/TR_Test_Script_Step__c/fields/TR_Tester_Role__c.field-meta.xml
<CustomField>
    <fullName>TR_Tester_Role__c</fullName>
    <label>Tester Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>