ProTrackDev/force-app/main/default/objects/TR_Test_Script_Step__c/validationRules/TR_PreventFromEditStepsUntilApproved.validationRule-meta.xml
<ValidationRule>
    <fullName>TR_PreventFromEditStepsUntilApproved</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL( TR_Test_Script__r.TR_Approval_Status__c  , &apos;Pending Approval&apos;)</errorConditionFormula>
    <errorMessage>You cannot Create / Edit a Test Script Step if the Test Script is Pending Approval.</errorMessage>
</ValidationRule>